exports[`Price #render() should not render underline when underlined flag is missing 1`] = `
<div
  className="ui-price ui-price_my-special-class"
  data-gtm-id="test">
  <div
    className="ui-price__value-delimiter">
    <div
      className="ui-price__currency ui-price__currency_right">
      د.إ.‏
    </div>
    <div
      className="ui-price__integers">
      50.153
    </div>
    <div
      className="ui-price__decimals">
      ,30
    </div>
  </div>
</div>
`;

exports[`Price #render() should render only the amount of decimals defined in the decimalsPrecision 1`] = `
<div
  className="ui-price">
  <div
    className="ui-price__value-delimiter">
    <div
      className="ui-price__currency ui-price__currency_right">
      د.إ.‏
    </div>
    <div
      className="ui-price__integers">
      50.153
    </div>
    <div
      className="ui-price__decimals">
      ,30
    </div>
  </div>
</div>
`;

exports[`Price #render() should render without decimals when showDecimals = false 1`] = `
<div
  className="ui-price ui-price_my-special-class">
  <div
    className="ui-price__value-delimiter">
    <div
      className="ui-price__currency ui-price__currency_right">
      د.إ.‏
    </div>
    <div
      className="ui-price__integers">
      50.153
    </div>
  </div>
  <div
    className="ui-price__underline" />
</div>
`;

exports[`Price #render() should render without thousands separator when overriden to empty string 1`] = `
<div
  className="ui-price">
  <div
    className="ui-price__value-delimiter">
    <div
      className="ui-price__currency ui-price__currency_right">
      د.إ.‏
    </div>
    <div
      className="ui-price__integers">
      50153
    </div>
    <div
      className="ui-price__decimals">
      ,30
    </div>
  </div>
</div>
`;

exports[`Price #render() should return base class with mods for strings as class and string as mods 1`] = `
<div
  className="ui-price ui-price_my-special-class"
  data-gtm-id="test">
  <div
    className="ui-price__value-delimiter">
    <div
      className="ui-price__currency ui-price__currency_right">
      د.إ.‏
    </div>
    <div
      className="ui-price__integers">
      50.153
    </div>
    <div
      className="ui-price__decimals">
      ,30
    </div>
  </div>
  <div
    className="ui-price__underline" />
</div>
`;
